--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
-    <string name="app_name">Simultaneous Interpretation</string>
-    <string name="action_settings">Settings</string>
-    <string name="start">Start</string>
-    <string name="stop">Stop</string>
-    <string name="status_disconnected">Disconnected</string>
-    <string name="status_connecting">Connecting...</string>
-    <string name="status_listening">Listening</string>
-    <string name="status_speaking">Speaking</string>
-    <string name="permission_rationale">Microphone permission is required for interpretation.</string>
+    <string name="app_name">同声传译</string>
+    <string name="action_settings">设置</string>
+    <string name="start">开始</string>
+    <string name="stop">停止</string>
+    <string name="status_disconnected">已断开</string>
+    <string name="status_connecting">连接中...</string>
+    <string name="status_listening">正在听...</string>
+    <string name="status_speaking">正在说话...</string>
+    <string name="permission_rationale">同声传译需要麦克风权限。</string>
 </resources>
